# comprehensive_rust

./: Cargo.toml  README.md
src/day1/: copying.rs  lifetimes-function-calls.rs  lifetimes-structs.rs  move-semantics.rs  moves-in-functions-calls.rs
src/day1/exercises/: iterators-ownership.rs  library.rs
src/day2/: destructure-enum.rs  enum_sizes.rs  enums.rs  field-shorthand.rs  match-guards.rs  methods.rs  pattern-matching.rs  receivers.rs  structs.rs  tuple-structs.rs
src/day2/exercises/: health-statistics.rs  points-polygons.rs
