[package]
name = "comprehensive_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "move-semantics"
path = "src/day1/move-semantics.rs"

[[bin]]
name = "moves-in-function-calls"
path = "src/day1/moves-in-function-calls.rs"

[[bin]]
name = "copying"
path = "src/day1/copying.rs"

[[bin]]
name = "lifetimes-function-calls"
path = "src/day1/lifetimes-function-calls.rs"

[[bin]]
name = "lifetimes-structs"
path = "src/day1/lifetimes-structs.rs"

[[bin]]
name = "library"
path = "src/day1/exercises/library.rs"

[[bin]]
name = "iterators-ownership"
path = "src/day1/exercises/iterators-ownership.rs"

[[bin]]
name = "structs"
path = "src/day2/structs.rs"

[[bin]]
name = "tuple-structs"
path = "src/day2/tuple-structs.rs"

[[bin]]
name = "field-shorthand"
path = "src/day2/field-shorthand.rs"

[[bin]]
name = "enums"
path = "src/day2/enums.rs"

[[bin]]
name = "variant-payloads"
path = "src/day2/variant-payloads.rs"

[[bin]]
name = "enum_sizes"
path = "src/day2/enum_sizes.rs"

[[bin]]
name = "receivers"
path = "src/day2/receivers.rs"

[[bin]]
name = "pattern-matching"
path = "src/day2/pattern-matching.rs"

[[bin]]
name = "destructure-enum"
path = "src/day2/destructure-enum.rs"

[[bin]]
name = "destructure-struct"
path = "src/day2/destructure-struct.rs"

[[bin]]
name = "destructure-arrays"
path = "src/day2/destructure-arrays.rs"

[[bin]]
name = "match-guards"
path = "src/day2/match-guards.rs"

[[bin]]
name = "health-statistics"
path = "src/day2/exercises/health-statistics.rs"

[[bin]]
name = "points-polygons"
path = "src/day2/exercises/points-polygons.rs"
